# i4a

./: .gitignore  CONTAINER.md  Dockerfile  README.md  i4a
app/main/: CMakeLists.txt  main.c
auxiliar/: README.md  contexto_repo.md  i4a-rpi-autoflash.service  install_rpi_autoflash.sh  raspberry_flasher_esp.md  rpi_autoflash_setup.md  rpi_esp_autoflash_daemon.py
components/: sdkconfig.defaults
components/callback/: CMakeLists.txt
components/callback/include/: callback.h
components/callback/src/: callback.c
components/config (custom ver)/include/: config.h
components/connectivity/: CMakeLists.txt
components/control/include/: control.h
components/extra/config (custom ver)/: config.c
components/extra/event/: CMakeLists.txt
components/extra/ring_link (custom ver)/: CMakeLists.txt
components/integration/callbacks/: CMakeLists.txt  callbacks.c  callbacks.h  callbacks_debug.c
components/integration/channel_manager/: CMakeLists.txt
components/internet4all/: CMakeLists.txt
components/node/: CMakeLists.txt
components/routing/routing/: CMakeLists.txt
components/routing/routing/include/routing/: impl.h  routing.h  routing_table.h  types.h
components/routing/routing/src/: home.c  impl_priv.h  root.c  routing.c  routing_table.c  utils.c  utils.h
components/routing/routing/src/forwarder/: forwarder.c  forwarder.h  peer.c  sibling.c
docker/: i4a-container.sh
docs/: software.md
docs/rpi/: 99-run-network-setup.sh  apply_nat.sh  deploy_esp_pi_server.sh  info_server.py  remote_control.py  script
extra/control/: CMakeLists.txt
firmware_bundle_simple/: esp_rpi_flasher.py
gateway/: 99-run-network-setup.sh  README.md  info_server.py
tests/2_nodes_with_ring_link/: CMakeLists.txt
tests/2_nodes_with_ring_link/main/: CMakeLists.txt  lwip_custom_hooks_for_test.c  main.c
tests/2_nodes_with_ring_link/main/lwip_custom_hooks_for_test/: CMakeLists.txt  lwip_custom_hooks.c
tests/ap_with_ring_link/: CMakeLists.txt
tests/app_with_routing_table/: CMakeLists.txt
tests/full_integration/: CMakeLists.txt  sdkconfig.old
tests/full_integration/main/: CMakeLists.txt  main.c  main_debug.c
(+195 files in other folders)
